// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioGroup renders the UI snapshot correctly 1`] = `
<div
  className="css-1xdhyk6"
  data-testid="ds-radioGroup"
  id="column"
>
  <span
    className="css-0"
    id="column-span-title"
  >
    column
  </span>
  <div
    aria-labelledby="column-span-title"
    className="chakra-radio-group css-0"
    role="radiogroup"
  >
    <div
      className="chakra-stack ds-radioGroup-stack css-19s3t1h"
    >
      <div
        className="css-1u8qly9"
        data-testid="ds-radio"
        id="radio-2-componentWrapper"
      >
        <label
          className="chakra-radio css-rfs4w5"
        >
          <input
            checked={false}
            className="chakra-radio__input"
            disabled={false}
            id="radio-2"
            name="column"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            required={false}
            style={
              {
                "border": "0",
                "clip": "rect(0, 0, 0, 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="2"
          />
          <span
            aria-hidden={true}
            className="chakra-radio__control css-ssalds"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <span
            className="chakra-radio__label css-1y8kf23"
            onMouseDown={[Function]}
          >
            <span
              className="css-0"
            >
              Radio 2
            </span>
          </span>
        </label>
        <div
          className="css-1xdhyk6"
          data-isinvalid={false}
          data-testid="ds-helperErrorText"
          id="radio-2-helperErrorText"
        >
          <div
            className="css-0"
          />
        </div>
      </div>
      <div
        className="css-1u8qly9"
        data-testid="ds-radio"
        id="radio-3-componentWrapper"
      >
        <label
          className="chakra-radio css-rfs4w5"
        >
          <input
            checked={false}
            className="chakra-radio__input"
            disabled={false}
            id="radio-3"
            name="column"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            required={false}
            style={
              {
                "border": "0",
                "clip": "rect(0, 0, 0, 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="3"
          />
          <span
            aria-hidden={true}
            className="chakra-radio__control css-ssalds"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <span
            className="chakra-radio__label css-1y8kf23"
            onMouseDown={[Function]}
          >
            <span
              className="css-0"
            >
              Radio 3
            </span>
          </span>
        </label>
        <div
          className="css-1xdhyk6"
          data-isinvalid={false}
          data-testid="ds-helperErrorText"
          id="radio-3-helperErrorText"
        >
          <div
            className="css-0"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="css-1xdhyk6"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="column-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</div>
`;

exports[`RadioGroup renders the UI snapshot correctly 2`] = `
<div
  className="css-1xdhyk6"
  data-testid="ds-radioGroup"
  id="row"
>
  <span
    className="css-0"
    id="row-span-title"
  >
    row
  </span>
  <div
    aria-labelledby="row-span-title"
    className="chakra-radio-group css-0"
    role="radiogroup"
  >
    <div
      className="chakra-stack ds-radioGroup-stack css-1478f2b"
    >
      <div
        className="css-1u8qly9"
        data-testid="ds-radio"
        id="radio-2-componentWrapper"
      >
        <label
          className="chakra-radio css-rfs4w5"
        >
          <input
            checked={false}
            className="chakra-radio__input"
            disabled={false}
            id="radio-2"
            name="row"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            required={false}
            style={
              {
                "border": "0",
                "clip": "rect(0, 0, 0, 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="2"
          />
          <span
            aria-hidden={true}
            className="chakra-radio__control css-ssalds"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <span
            className="chakra-radio__label css-1y8kf23"
            onMouseDown={[Function]}
          >
            <span
              className="css-0"
            >
              Radio 2
            </span>
          </span>
        </label>
        <div
          className="css-1xdhyk6"
          data-isinvalid={false}
          data-testid="ds-helperErrorText"
          id="radio-2-helperErrorText"
        >
          <div
            className="css-0"
          />
        </div>
      </div>
      <div
        className="css-1u8qly9"
        data-testid="ds-radio"
        id="radio-3-componentWrapper"
      >
        <label
          className="chakra-radio css-rfs4w5"
        >
          <input
            checked={false}
            className="chakra-radio__input"
            disabled={false}
            id="radio-3"
            name="row"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            required={false}
            style={
              {
                "border": "0",
                "clip": "rect(0, 0, 0, 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="3"
          />
          <span
            aria-hidden={true}
            className="chakra-radio__control css-ssalds"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <span
            className="chakra-radio__label css-1y8kf23"
            onMouseDown={[Function]}
          >
            <span
              className="css-0"
            >
              Radio 3
            </span>
          </span>
        </label>
        <div
          className="css-1xdhyk6"
          data-isinvalid={false}
          data-testid="ds-helperErrorText"
          id="radio-3-helperErrorText"
        >
          <div
            className="css-0"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="css-1xdhyk6"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="row-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</div>
`;

exports[`RadioGroup renders the UI snapshot correctly 3`] = `
<div
  className="css-1xdhyk6"
  data-testid="ds-radioGroup"
  id="noLabel"
>
  <span
    className="css-0"
    id="noLabel-span-title"
  >
    no label
  </span>
  <div
    aria-labelledby="noLabel-span-title"
    className="chakra-radio-group css-0"
    role="radiogroup"
  >
    <div
      className="chakra-stack ds-radioGroup-stack css-19s3t1h"
    >
      <div
        className="css-1u8qly9"
        data-testid="ds-radio"
        id="radio-2-componentWrapper"
      >
        <label
          className="chakra-radio css-rfs4w5"
        >
          <input
            checked={false}
            className="chakra-radio__input"
            disabled={false}
            id="radio-2"
            name="noLabel"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            required={false}
            style={
              {
                "border": "0",
                "clip": "rect(0, 0, 0, 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="2"
          />
          <span
            aria-hidden={true}
            className="chakra-radio__control css-ssalds"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <span
            className="chakra-radio__label css-1y8kf23"
            onMouseDown={[Function]}
          >
            <span
              className="css-0"
            >
              Radio 2
            </span>
          </span>
        </label>
        <div
          className="css-1xdhyk6"
          data-isinvalid={false}
          data-testid="ds-helperErrorText"
          id="radio-2-helperErrorText"
        >
          <div
            className="css-0"
          />
        </div>
      </div>
      <div
        className="css-1u8qly9"
        data-testid="ds-radio"
        id="radio-3-componentWrapper"
      >
        <label
          className="chakra-radio css-rfs4w5"
        >
          <input
            checked={false}
            className="chakra-radio__input"
            disabled={false}
            id="radio-3"
            name="noLabel"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            required={false}
            style={
              {
                "border": "0",
                "clip": "rect(0, 0, 0, 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="3"
          />
          <span
            aria-hidden={true}
            className="chakra-radio__control css-ssalds"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <span
            className="chakra-radio__label css-1y8kf23"
            onMouseDown={[Function]}
          >
            <span
              className="css-0"
            >
              Radio 3
            </span>
          </span>
        </label>
        <div
          className="css-1xdhyk6"
          data-isinvalid={false}
          data-testid="ds-helperErrorText"
          id="radio-3-helperErrorText"
        >
          <div
            className="css-0"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="css-1xdhyk6"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="noLabel-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</div>
`;

exports[`RadioGroup renders the UI snapshot correctly 4`] = `
<div
  className="css-1xdhyk6"
  data-testid="ds-radioGroup"
  id="helperText"
>
  <span
    className="css-0"
    id="helperText-span-title"
  >
    helperText
  </span>
  <div
    aria-labelledby="helperText-span-title"
    className="chakra-radio-group css-0"
    role="radiogroup"
  >
    <div
      className="chakra-stack ds-radioGroup-stack css-19s3t1h"
    >
      <div
        className="css-1u8qly9"
        data-testid="ds-radio"
        id="radio-2-componentWrapper"
      >
        <label
          className="chakra-radio css-rfs4w5"
        >
          <input
            checked={false}
            className="chakra-radio__input"
            disabled={false}
            id="radio-2"
            name="helperText"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            required={false}
            style={
              {
                "border": "0",
                "clip": "rect(0, 0, 0, 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="2"
          />
          <span
            aria-hidden={true}
            className="chakra-radio__control css-ssalds"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <span
            className="chakra-radio__label css-1y8kf23"
            onMouseDown={[Function]}
          >
            <span
              className="css-0"
            >
              Radio 2
            </span>
          </span>
        </label>
        <div
          className="css-1xdhyk6"
          data-isinvalid={false}
          data-testid="ds-helperErrorText"
          id="radio-2-helperErrorText"
        >
          <div
            className="css-0"
          />
        </div>
      </div>
      <div
        className="css-1u8qly9"
        data-testid="ds-radio"
        id="radio-3-componentWrapper"
      >
        <label
          className="chakra-radio css-rfs4w5"
        >
          <input
            checked={false}
            className="chakra-radio__input"
            disabled={false}
            id="radio-3"
            name="helperText"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            required={false}
            style={
              {
                "border": "0",
                "clip": "rect(0, 0, 0, 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="3"
          />
          <span
            aria-hidden={true}
            className="chakra-radio__control css-ssalds"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <span
            className="chakra-radio__label css-1y8kf23"
            onMouseDown={[Function]}
          >
            <span
              className="css-0"
            >
              Radio 3
            </span>
          </span>
        </label>
        <div
          className="css-1xdhyk6"
          data-isinvalid={false}
          data-testid="ds-helperErrorText"
          id="radio-3-helperErrorText"
        >
          <div
            className="css-0"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="css-1xdhyk6"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="helperText-helperErrorText"
  >
    <div
      className="css-0"
      dangerouslySetInnerHTML={
        {
          "__html": "helper text",
        }
      }
    />
  </div>
</div>
`;

exports[`RadioGroup renders the UI snapshot correctly 5`] = `
<div
  className="css-1xdhyk6"
  data-testid="ds-radioGroup"
  id="invalidText"
>
  <span
    className="css-0"
    id="invalidText-span-title"
  >
    invalidText
  </span>
  <div
    aria-labelledby="invalidText-span-title"
    className="chakra-radio-group css-0"
    role="radiogroup"
  >
    <div
      className="chakra-stack ds-radioGroup-stack css-19s3t1h"
    >
      <div
        className="css-1u8qly9"
        data-testid="ds-radio"
        id="radio-2-componentWrapper"
      >
        <label
          className="chakra-radio css-rfs4w5"
        >
          <input
            checked={false}
            className="chakra-radio__input"
            disabled={false}
            id="radio-2"
            name="invalidText"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            required={false}
            style={
              {
                "border": "0",
                "clip": "rect(0, 0, 0, 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="2"
          />
          <span
            aria-hidden={true}
            className="chakra-radio__control css-ssalds"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <span
            className="chakra-radio__label css-1y8kf23"
            onMouseDown={[Function]}
          >
            <span
              className="css-0"
            >
              Radio 2
            </span>
          </span>
        </label>
        <div
          className="css-1xdhyk6"
          data-isinvalid={false}
          data-testid="ds-helperErrorText"
          id="radio-2-helperErrorText"
        >
          <div
            className="css-0"
          />
        </div>
      </div>
      <div
        className="css-1u8qly9"
        data-testid="ds-radio"
        id="radio-3-componentWrapper"
      >
        <label
          className="chakra-radio css-rfs4w5"
        >
          <input
            checked={false}
            className="chakra-radio__input"
            disabled={false}
            id="radio-3"
            name="invalidText"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            required={false}
            style={
              {
                "border": "0",
                "clip": "rect(0, 0, 0, 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="3"
          />
          <span
            aria-hidden={true}
            className="chakra-radio__control css-ssalds"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <span
            className="chakra-radio__label css-1y8kf23"
            onMouseDown={[Function]}
          >
            <span
              className="css-0"
            >
              Radio 3
            </span>
          </span>
        </label>
        <div
          className="css-1xdhyk6"
          data-isinvalid={false}
          data-testid="ds-helperErrorText"
          id="radio-3-helperErrorText"
        >
          <div
            className="css-0"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="css-1xdhyk6"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="invalidText-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</div>
`;

exports[`RadioGroup renders the UI snapshot correctly 6`] = `
<div
  className="css-1xdhyk6"
  data-testid="ds-radioGroup"
  id="noRequiredLabel"
>
  <span
    className="css-0"
    id="noRequiredLabel-span-title"
  >
    no optional or required label
  </span>
  <div
    aria-labelledby="noRequiredLabel-span-title"
    className="chakra-radio-group css-0"
    role="radiogroup"
  >
    <div
      className="chakra-stack ds-radioGroup-stack css-19s3t1h"
    >
      <div
        className="css-1u8qly9"
        data-testid="ds-radio"
        id="radio-2-componentWrapper"
      >
        <label
          className="chakra-radio css-rfs4w5"
        >
          <input
            aria-required={true}
            checked={false}
            className="chakra-radio__input"
            disabled={false}
            id="radio-2"
            name="noRequiredLabel"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            required={true}
            style={
              {
                "border": "0",
                "clip": "rect(0, 0, 0, 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="2"
          />
          <span
            aria-hidden={true}
            className="chakra-radio__control css-ssalds"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <span
            className="chakra-radio__label css-1y8kf23"
            onMouseDown={[Function]}
          >
            <span
              className="css-0"
            >
              Radio 2
            </span>
          </span>
        </label>
        <div
          className="css-1xdhyk6"
          data-isinvalid={false}
          data-testid="ds-helperErrorText"
          id="radio-2-helperErrorText"
        >
          <div
            className="css-0"
          />
        </div>
      </div>
      <div
        className="css-1u8qly9"
        data-testid="ds-radio"
        id="radio-3-componentWrapper"
      >
        <label
          className="chakra-radio css-rfs4w5"
        >
          <input
            aria-required={true}
            checked={false}
            className="chakra-radio__input"
            disabled={false}
            id="radio-3"
            name="noRequiredLabel"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            required={true}
            style={
              {
                "border": "0",
                "clip": "rect(0, 0, 0, 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="3"
          />
          <span
            aria-hidden={true}
            className="chakra-radio__control css-ssalds"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <span
            className="chakra-radio__label css-1y8kf23"
            onMouseDown={[Function]}
          >
            <span
              className="css-0"
            >
              Radio 3
            </span>
          </span>
        </label>
        <div
          className="css-1xdhyk6"
          data-isinvalid={false}
          data-testid="ds-helperErrorText"
          id="radio-3-helperErrorText"
        >
          <div
            className="css-0"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="css-1xdhyk6"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="noRequiredLabel-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</div>
`;

exports[`RadioGroup renders the UI snapshot correctly 7`] = `
<div
  className="css-1xdhyk6"
  data-testid="ds-radioGroup"
  id="required"
>
  <span
    className="css-0"
    id="required-span-title"
  >
    required
    <span>
       (required)
    </span>
  </span>
  <div
    aria-labelledby="required-span-title"
    className="chakra-radio-group css-0"
    role="radiogroup"
  >
    <div
      className="chakra-stack ds-radioGroup-stack css-19s3t1h"
    >
      <div
        className="css-1u8qly9"
        data-testid="ds-radio"
        id="radio-2-componentWrapper"
      >
        <label
          className="chakra-radio css-rfs4w5"
        >
          <input
            aria-required={true}
            checked={false}
            className="chakra-radio__input"
            disabled={false}
            id="radio-2"
            name="required"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            required={true}
            style={
              {
                "border": "0",
                "clip": "rect(0, 0, 0, 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="2"
          />
          <span
            aria-hidden={true}
            className="chakra-radio__control css-ssalds"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <span
            className="chakra-radio__label css-1y8kf23"
            onMouseDown={[Function]}
          >
            <span
              className="css-0"
            >
              Radio 2
            </span>
          </span>
        </label>
        <div
          className="css-1xdhyk6"
          data-isinvalid={false}
          data-testid="ds-helperErrorText"
          id="radio-2-helperErrorText"
        >
          <div
            className="css-0"
          />
        </div>
      </div>
      <div
        className="css-1u8qly9"
        data-testid="ds-radio"
        id="radio-3-componentWrapper"
      >
        <label
          className="chakra-radio css-rfs4w5"
        >
          <input
            aria-required={true}
            checked={false}
            className="chakra-radio__input"
            disabled={false}
            id="radio-3"
            name="required"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            required={true}
            style={
              {
                "border": "0",
                "clip": "rect(0, 0, 0, 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="3"
          />
          <span
            aria-hidden={true}
            className="chakra-radio__control css-ssalds"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <span
            className="chakra-radio__label css-1y8kf23"
            onMouseDown={[Function]}
          >
            <span
              className="css-0"
            >
              Radio 3
            </span>
          </span>
        </label>
        <div
          className="css-1xdhyk6"
          data-isinvalid={false}
          data-testid="ds-helperErrorText"
          id="radio-3-helperErrorText"
        >
          <div
            className="css-0"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="css-1xdhyk6"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="required-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</div>
`;

exports[`RadioGroup renders the UI snapshot correctly 8`] = `
<div
  className="css-1xdhyk6"
  data-testid="ds-radioGroup"
  id="invalid"
>
  <span
    className="css-0"
    id="invalid-span-title"
  >
    invalid
  </span>
  <div
    aria-labelledby="invalid-span-title"
    className="chakra-radio-group css-0"
    role="radiogroup"
  >
    <div
      className="chakra-stack ds-radioGroup-stack css-19s3t1h"
    >
      <div
        className="css-1u8qly9"
        data-testid="ds-radio"
        id="radio-2-componentWrapper"
      >
        <label
          className="chakra-radio css-rfs4w5"
          data-invalid=""
        >
          <input
            aria-invalid={true}
            checked={false}
            className="chakra-radio__input"
            disabled={false}
            id="radio-2"
            name="invalid"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            required={false}
            style={
              {
                "border": "0",
                "clip": "rect(0, 0, 0, 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="2"
          />
          <span
            aria-hidden={true}
            className="chakra-radio__control css-ssalds"
            data-invalid=""
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <span
            className="chakra-radio__label css-1y8kf23"
            data-invalid=""
            onMouseDown={[Function]}
          >
            <span
              className="css-0"
            >
              Radio 2
            </span>
          </span>
        </label>
        <div
          className="css-1xdhyk6"
          data-isinvalid={false}
          data-testid="ds-helperErrorText"
          id="radio-2-helperErrorText"
        >
          <div
            className="css-0"
          />
        </div>
      </div>
      <div
        className="css-1u8qly9"
        data-testid="ds-radio"
        id="radio-3-componentWrapper"
      >
        <label
          className="chakra-radio css-rfs4w5"
          data-invalid=""
        >
          <input
            aria-invalid={true}
            checked={false}
            className="chakra-radio__input"
            disabled={false}
            id="radio-3"
            name="invalid"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            required={false}
            style={
              {
                "border": "0",
                "clip": "rect(0, 0, 0, 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="3"
          />
          <span
            aria-hidden={true}
            className="chakra-radio__control css-ssalds"
            data-invalid=""
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <span
            className="chakra-radio__label css-1y8kf23"
            data-invalid=""
            onMouseDown={[Function]}
          >
            <span
              className="css-0"
            >
              Radio 3
            </span>
          </span>
        </label>
        <div
          className="css-1xdhyk6"
          data-isinvalid={false}
          data-testid="ds-helperErrorText"
          id="radio-3-helperErrorText"
        >
          <div
            className="css-0"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="css-1xdhyk6"
    data-isinvalid={true}
    data-testid="ds-helperErrorText"
    id="invalid-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</div>
`;

exports[`RadioGroup renders the UI snapshot correctly 9`] = `
<div
  className="css-1xdhyk6"
  data-testid="ds-radioGroup"
  id="disabled"
>
  <span
    className="css-0"
    id="disabled-span-title"
  >
    disabled
  </span>
  <div
    aria-labelledby="disabled-span-title"
    className="chakra-radio-group css-0"
    role="radiogroup"
  >
    <div
      className="chakra-stack ds-radioGroup-stack css-19s3t1h"
    >
      <div
        className="css-1u8qly9"
        data-testid="ds-radio"
        id="radio-2-componentWrapper"
      >
        <label
          className="chakra-radio css-rfs4w5"
          data-disabled=""
        >
          <input
            aria-disabled={true}
            checked={false}
            className="chakra-radio__input"
            disabled={true}
            id="radio-2"
            name="disabled"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            required={false}
            style={
              {
                "border": "0",
                "clip": "rect(0, 0, 0, 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="2"
          />
          <span
            aria-hidden={true}
            className="chakra-radio__control css-ssalds"
            data-disabled=""
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <span
            className="chakra-radio__label css-1y8kf23"
            data-disabled=""
            onMouseDown={[Function]}
          >
            <span
              className="css-0"
            >
              Radio 2
            </span>
          </span>
        </label>
        <div
          className="css-1xdhyk6"
          data-isinvalid={false}
          data-testid="ds-helperErrorText"
          id="radio-2-helperErrorText"
        >
          <div
            className="css-0"
          />
        </div>
      </div>
      <div
        className="css-1u8qly9"
        data-testid="ds-radio"
        id="radio-3-componentWrapper"
      >
        <label
          className="chakra-radio css-rfs4w5"
          data-disabled=""
        >
          <input
            aria-disabled={true}
            checked={false}
            className="chakra-radio__input"
            disabled={true}
            id="radio-3"
            name="disabled"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            required={false}
            style={
              {
                "border": "0",
                "clip": "rect(0, 0, 0, 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="3"
          />
          <span
            aria-hidden={true}
            className="chakra-radio__control css-ssalds"
            data-disabled=""
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <span
            className="chakra-radio__label css-1y8kf23"
            data-disabled=""
            onMouseDown={[Function]}
          >
            <span
              className="css-0"
            >
              Radio 3
            </span>
          </span>
        </label>
        <div
          className="css-1xdhyk6"
          data-isinvalid={false}
          data-testid="ds-helperErrorText"
          id="radio-3-helperErrorText"
        >
          <div
            className="css-0"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="css-1xdhyk6"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="disabled-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</div>
`;

exports[`RadioGroup renders the UI snapshot correctly 10`] = `
<div
  className="css-1xdhyk6"
  data-testid="ds-radioGroup"
  id="jsxLabels"
>
  <span
    className="css-0"
    id="jsxLabels-span-title"
  >
    RadioGroup example
  </span>
  <div
    aria-labelledby="jsxLabels-span-title"
    className="chakra-radio-group css-0"
    role="radiogroup"
  >
    <div
      className="chakra-stack ds-radioGroup-stack css-19s3t1h"
    >
      <div
        className="css-1u8qly9"
        data-testid="ds-radio"
        id="arts-componentWrapper"
      >
        <label
          className="chakra-radio css-rfs4w5"
        >
          <input
            checked={false}
            className="chakra-radio__input"
            disabled={false}
            id="arts"
            name="a11y-test"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            required={false}
            style={
              {
                "border": "0",
                "clip": "rect(0, 0, 0, 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="arts"
          />
          <span
            aria-hidden={true}
            className="chakra-radio__control css-ssalds"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <span
            className="chakra-radio__label css-1y8kf23"
            onMouseDown={[Function]}
          >
            <span
              className="css-0"
            >
              <div
                className="css-k008qs"
              >
                <span>
                  Arts
                </span>
                <div
                  className="css-17xejub"
                />
                <span>
                  4
                </span>
              </div>
            </span>
          </span>
        </label>
        <div
          className="css-1xdhyk6"
          data-isinvalid={false}
          data-testid="ds-helperErrorText"
          id="arts-helperErrorText"
        >
          <div
            className="css-0"
          />
        </div>
      </div>
      <div
        className="css-1u8qly9"
        data-testid="ds-radio"
        id="English-componentWrapper"
      >
        <label
          className="chakra-radio css-rfs4w5"
        >
          <input
            checked={false}
            className="chakra-radio__input"
            disabled={false}
            id="English"
            name="a11y-test"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            required={false}
            style={
              {
                "border": "0",
                "clip": "rect(0, 0, 0, 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="English"
          />
          <span
            aria-hidden={true}
            className="chakra-radio__control css-ssalds"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <span
            className="chakra-radio__label css-1y8kf23"
            onMouseDown={[Function]}
          >
            <span
              className="css-0"
            >
              <div
                className="css-k008qs"
              >
                <span>
                  English
                </span>
                <div
                  className="css-17xejub"
                />
                <span>
                  23
                </span>
              </div>
            </span>
          </span>
        </label>
        <div
          className="css-1xdhyk6"
          data-isinvalid={false}
          data-testid="ds-helperErrorText"
          id="English-helperErrorText"
        >
          <div
            className="css-0"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="css-1xdhyk6"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="jsxLabels-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</div>
`;

exports[`RadioGroup renders the UI snapshot correctly 11`] = `
<div
  className="css-kle7zy"
  data-testid="ds-radioGroup"
  id="chakra"
>
  <span
    className="css-0"
    id="chakra-span-title"
  >
    chakra
  </span>
  <div
    aria-labelledby="chakra-span-title"
    className="chakra-radio-group css-0"
    role="radiogroup"
  >
    <div
      className="chakra-stack ds-radioGroup-stack css-19s3t1h"
    >
      <div
        className="css-1u8qly9"
        data-testid="ds-radio"
        id="radio-2-componentWrapper"
      >
        <label
          className="chakra-radio css-rfs4w5"
        >
          <input
            checked={false}
            className="chakra-radio__input"
            disabled={false}
            id="radio-2"
            name="chakra"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            required={false}
            style={
              {
                "border": "0",
                "clip": "rect(0, 0, 0, 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="2"
          />
          <span
            aria-hidden={true}
            className="chakra-radio__control css-ssalds"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <span
            className="chakra-radio__label css-1y8kf23"
            onMouseDown={[Function]}
          >
            <span
              className="css-0"
            >
              Radio 2
            </span>
          </span>
        </label>
        <div
          className="css-1xdhyk6"
          data-isinvalid={false}
          data-testid="ds-helperErrorText"
          id="radio-2-helperErrorText"
        >
          <div
            className="css-0"
          />
        </div>
      </div>
      <div
        className="css-1u8qly9"
        data-testid="ds-radio"
        id="radio-3-componentWrapper"
      >
        <label
          className="chakra-radio css-rfs4w5"
        >
          <input
            checked={false}
            className="chakra-radio__input"
            disabled={false}
            id="radio-3"
            name="chakra"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            required={false}
            style={
              {
                "border": "0",
                "clip": "rect(0, 0, 0, 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="3"
          />
          <span
            aria-hidden={true}
            className="chakra-radio__control css-ssalds"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <span
            className="chakra-radio__label css-1y8kf23"
            onMouseDown={[Function]}
          >
            <span
              className="css-0"
            >
              Radio 3
            </span>
          </span>
        </label>
        <div
          className="css-1xdhyk6"
          data-isinvalid={false}
          data-testid="ds-helperErrorText"
          id="radio-3-helperErrorText"
        >
          <div
            className="css-0"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="css-1xdhyk6"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="chakra-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</div>
`;

exports[`RadioGroup renders the UI snapshot correctly 12`] = `
<div
  className="css-1xdhyk6"
  data-testid="props"
  id="props"
>
  <span
    className="css-0"
    id="props-span-title"
  >
    props
  </span>
  <div
    aria-labelledby="props-span-title"
    className="chakra-radio-group css-0"
    role="radiogroup"
  >
    <div
      className="chakra-stack ds-radioGroup-stack css-19s3t1h"
    >
      <div
        className="css-1u8qly9"
        data-testid="ds-radio"
        id="radio-2-componentWrapper"
      >
        <label
          className="chakra-radio css-rfs4w5"
        >
          <input
            checked={false}
            className="chakra-radio__input"
            disabled={false}
            id="radio-2"
            name="props"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            required={false}
            style={
              {
                "border": "0",
                "clip": "rect(0, 0, 0, 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="2"
          />
          <span
            aria-hidden={true}
            className="chakra-radio__control css-ssalds"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <span
            className="chakra-radio__label css-1y8kf23"
            onMouseDown={[Function]}
          >
            <span
              className="css-0"
            >
              Radio 2
            </span>
          </span>
        </label>
        <div
          className="css-1xdhyk6"
          data-isinvalid={false}
          data-testid="ds-helperErrorText"
          id="radio-2-helperErrorText"
        >
          <div
            className="css-0"
          />
        </div>
      </div>
      <div
        className="css-1u8qly9"
        data-testid="ds-radio"
        id="radio-3-componentWrapper"
      >
        <label
          className="chakra-radio css-rfs4w5"
        >
          <input
            checked={false}
            className="chakra-radio__input"
            disabled={false}
            id="radio-3"
            name="props"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            required={false}
            style={
              {
                "border": "0",
                "clip": "rect(0, 0, 0, 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="3"
          />
          <span
            aria-hidden={true}
            className="chakra-radio__control css-ssalds"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <span
            className="chakra-radio__label css-1y8kf23"
            onMouseDown={[Function]}
          >
            <span
              className="css-0"
            >
              Radio 3
            </span>
          </span>
        </label>
        <div
          className="css-1xdhyk6"
          data-isinvalid={false}
          data-testid="ds-helperErrorText"
          id="radio-3-helperErrorText"
        >
          <div
            className="css-0"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="css-1xdhyk6"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="props-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</div>
`;
